# loci-db

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NEXT_STEPS.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: ci.yml  cloud-api.yml  publish.yml
benchmarks/: benchmark_retrieval.py  docker-compose.yml  local_benchmark.py  vs_naive_qdrant.py
benchmarks/results/: latest.json  retrieval_latest.json
cloud/: README.md  fly.toml
cloud/api/: Dockerfile  auth.py  generate_key.py  requirements.txt  server.py
cloud/docs/: quickstart.md
cloud/docs/runbooks/: secrets-rotation.md
cloud/edge/: worker.js  wrangler.toml
cloud/migrations/: 001_api_keys.sql  002_rate_limits.sql  003_rls.sql  004_admin_keys.sql
cloud/terraform/: main.tf  variables.tf
cloud/tests/: conftest.py  test_admin.py  test_api.py
demo/: Dockerfile  README.md  railway.json  requirements.txt  run_demo.sh
demo/app/: embeddings.py  main.py  simulation.py
demo/static/: index.html
demo_spatial/: requirements.txt  run_demo.sh
demo_spatial/app/: main.py  proactive_voice.py  scene_ingestion.py  spatial_memory.py  vlm_client.py  voice_pipeline.py
demo_spatial/static/: index.html  scanner.html
deploy/oak-rpi5/: README.md  config.yaml  proactive_main.py  requirements.txt
deploy/oak-rpi5/app/: __init__.py  audio_io.py  main.py  oak_pipeline.py  proactive_engine.py  scene_ingestion.py  spatial_memory.py  voice_pipeline.py
deploy/oak-rpi5/models/: README.md
deploy/oak-rpi5/scripts/: convert_model.sh  pair_bluetooth.sh  run.sh  setup_rpi5.sh
deploy/oak-rpi5/systemd/: loci-demo.service
docs/: BENCHMARK_METHODOLOGY.md  NOVELTY.md  WORLD_MODEL_INTEGRATION.md
engram/: __init__.py  async_client.py  client.py  local_client.py  retry.py  schema.py
engram/backends/: __init__.py  memory.py
engram/retrieval/: funnel.py  predict.py
engram/spatial/: adaptive.py  buckets.py  hilbert.py
examples/: basic_usage.py  local_usage.py  predict_retrieve.py
experimental/IDD-58-hilbert-bucket-search/: JUDGE_EVALUATION.md  RESULTS.md  THESIS.md
loci/: __init__.py  async_client.py  cli.py  client.py  cloud_transport.py  local_client.py  payload_filters.py  retry.py  schema.py
loci-core/: Cargo.toml  PERFORMANCE.md  pyproject.toml
loci-core/benches/: encoding_bench.rs  hilbert_experiments_bench.rs
loci-core/src/: batch.rs  hilbert.rs  hilbert_experiments.rs  lib.rs  novelty.rs  spatial.rs  temporal.rs
loci-core/tests/: hilbert_experiments_eval.rs  integration.rs
loci/adapters/: __init__.py  dreamer.py  generic.py  vjepa2.py
loci/backends/: __init__.py  memory.py
loci/retrieval/: __init__.py  funnel.py  novelty.py  predict.py
loci/spatial/: __init__.py  adaptive.py  buckets.py  filtering.py  hilbert.py  query_plan.py
loci/temporal/: __init__.py  decay.py  retention.py  sharding.py
research/: __init__.py  _llm_utils.py  cli.py  models.py  pipeline.py  program.md
research/agents/: __init__.py  analyzer.py  judge.py  optimizer.py
research/runners/: __init__.py  base.py  code.py  llm.py  metric.py
tests/: conftest.py  test_adapters.py  test_adaptive.py  test_adaptive_integration.py  test_async_client.py  test_batch_causal.py  test_causal_context.py  test_cli.py  test_client.py  test_cloud_mode.py  test_decay.py  test_demo_api.py  test_distance_metric.py  test_funnel_query.py  test_hilbert.py  test_llm_utils.py  test_local_client.py  test_memory_store.py  test_predict_retrieve.py  test_proactive_engine.py  test_proactive_main.py  test_proactive_voice.py  test_research_pipeline.py  test_retention.py  test_retry.py  test_schema.py  test_server.py  test_sharding.py  test_spatial_deduplication.py  test_spatial_memory_confidence.py  test_temporal_consensus.py  test_vlm_confidence_calibration.py
