[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-db"
version = "0.2.0"
description = "4D spatiotemporal vector database middleware for AI world models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Engram Contributors" },
]
keywords = ["vector-database", "spatiotemporal", "world-models", "qdrant", "hilbert-curve"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "qdrant-client>=1.7.0",
    "hilbertcurve>=2.0.5",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["engram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
