[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "loci-stdb"
version = "0.3.0"
description = "4D spatiotemporal vector database middleware for AI world models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Loci Contributors" },
]
keywords = ["vector-database", "spatiotemporal", "world-models", "qdrant", "hilbert-curve"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "qdrant-client>=1.7.0",
    "hilbertcurve>=2.0.5",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/zd87pl/loci-db"
Repository = "https://github.com/zd87pl/loci-db"
Issues = "https://github.com/zd87pl/loci-db/issues"

[project.optional-dependencies]
native = [
    "loci-core @ ./loci-core",
]
research = [
    "anthropic>=0.94.0",
    "click>=8.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "fastapi[standard]>=0.100.0",
    "httpx>=0.24.0",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
    "anthropic>=0.94.0",
    "maturin>=1.5",
]

[project.scripts]
loci = "loci.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["loci"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "S"]
# S101 (assert): allowed in tests; S603/S607: subprocess with literal args is fine
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
# Benchmarks and examples use random for data generation, not cryptography
"benchmarks/**" = ["S311", "S112"]
"examples/**" = ["S311"]

[tool.bandit]
skips = ["B101"]  # assert statements are fine in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
# Prefer per-module overrides over global ignore_missing_imports.
# Third-party stubs that ship their own types are checked; others are silenced below.

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "hilbertcurve.*",
    "segno.*",
    "faster_whisper.*",
    "edge_tts.*",
]
ignore_missing_imports = true
