[package]
name = "loci-core"
version = "0.1.0"
edition = "2021"
description = "High-performance native primitives for LOCI-DB spatiotemporal vector database"
license = "Apache-2.0"

[lib]
name = "loci_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
numpy = { version = "0.28", optional = true }
rayon = "1.10"
num-traits = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "encoding_bench"
harness = false
