[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "loci-core"
version = "0.1.0"
description = "High-performance native primitives for LOCI-DB spatiotemporal vector database"
requires-python = ">=3.10"
license = "Apache-2.0"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "loci_core"
